option('require_simd', type: 'boolean', value: false, description: 'Generate a fatal error if SIMD extensions are not available for this platform (default is to fall back to a non-SIMD build)')
option('with_12bit', type: 'boolean', value: false, description: 'Encode/decode JPEG images with 12-bit samples (implies wirth_arith_dec=false with_arith_enc=false with_java=false with_simd=false with_turbojpeg=false)')
option('with_arith_dec', type: 'boolean', value: true, description: 'Include arithmetic decoding support when emulating the libjpeg v6b API/ABI')
option('with_arith_enc', type: 'boolean', value: true, description: 'Include arithmetic encoding support when emulating the libjpeg v6b API/ABI')
option('with_java', type: 'boolean', value: false, description: 'Build Java wrapper for the TurboJPEG API library (implies ENABLE_SHARED=1)')
option('with_jpeg7', type: 'boolean', value: false, description: 'Emulate libjpeg v7 API/ABI (this makes libjpeg-turbo backward-incompatible with libjpeg v6b)')
option('with_jpeg8', type: 'boolean', value: false, description: 'Emulate libjpeg v8 API/ABI (this makes libjpeg-turbo backward-incompatible with libjpeg v6b)')
option('with_mem_srcdst', type: 'boolean', value: true, description: 'Include in-memory source/destination manager functions when emulating the libjpeg v6b or v7 API/ABI')
option('with_simd', type: 'boolean', value: true, description: 'Include SIMD extensions, if available for this platform')
option('with_turbojpeg', type: 'boolean', value: true, description: 'Include the TurboJPEG API library and associated test programs')
option('force_inline', type: 'boolean', value: true, description: 'Force function inlining')